--- a/docs/latex/main_8c.tex
+++ b/docs/latex/main_8c.tex
@@ -1,12 +1,12 @@
-\doxysection{C\+:/\+Users/unai.marti/\+MIS COSAS/\+REPOS/\+Doxy/\+Doxy/\+Core/\+Src/main.c File Reference}
-\hypertarget{main_8c}{}\label{main_8c}\index{C:/Users/unai.marti/MIS COSAS/REPOS/Doxy/Doxy/Core/Src/main.c@{C:/Users/unai.marti/MIS COSAS/REPOS/Doxy/Doxy/Core/Src/main.c}}
+\doxysection{Referencia del archivo Core/\+Src/main.c}
+\hypertarget{main_8c}{}\label{main_8c}\index{Core/Src/main.c@{Core/Src/main.c}}
 
 
 \+: Main program body  
 
 
 {\ttfamily \#include "{}main.\+h"{}}\newline
-\doxysubsubsection*{Functions}
+\doxysubsubsection*{Funciones}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{main_8c_a70af21c671abfcc773614a9a4f63d920}{System\+Clock\+\_\+\+Config}} (void)
@@ -23,17 +23,17 @@ UART\+\_\+\+Handle\+Type\+Def {\bfseries hlpuart1}
 \end{DoxyCompactItemize}
 
 
-\doxysubsection{Detailed Description}
+\doxysubsection{Descripción detallada}
 \+: Main program body 
 
-\begin{DoxyAttention}{Attention}
+\begin{DoxyAttention}{Atención}
 
 \end{DoxyAttention}
 Copyright (c) 2023 STMicroelectronics. All rights reserved.
 
 This software is licensed under terms that can be found in the LICENSE file in the root directory of this software component. If no LICENSE file comes with this software, it is provided AS-\/\+IS. 
 
-\doxysubsection{Function Documentation}
+\doxysubsection{Documentación de funciones}
 \Hypertarget{main_8c_a1730ffe1e560465665eb47d9264826f9}\label{main_8c_a1730ffe1e560465665eb47d9264826f9} 
 \index{main.c@{main.c}!Error\_Handler@{Error\_Handler}}
 \index{Error\_Handler@{Error\_Handler}!main.c@{main.c}}
@@ -45,7 +45,7 @@ This software is licensed under terms that can be found in the LICENSE file in t
 This function is executed in case of error occurrence. 
 
 
-\begin{DoxyRetVals}{Return values}
+\begin{DoxyRetVals}{Valores devueltos}
 {\em None} & \\
 \hline
 \end{DoxyRetVals}
@@ -60,7 +60,7 @@ This function is executed in case of error occurrence.
 The application entry point. 
 
 
-\begin{DoxyRetVals}{Return values}
+\begin{DoxyRetVals}{Valores devueltos}
 {\em int} & \\
 \hline
 \end{DoxyRetVals}
@@ -75,7 +75,7 @@ The application entry point.
 System Clock Configuration. 
 
 
-\begin{DoxyRetVals}{Return values}
+\begin{DoxyRetVals}{Valores devueltos}
 {\em None} & \\
 \hline
 \end{DoxyRetVals}
