--- a/docs/latex/group___s_t_m32_g4xx___system___private___includes.tex
+++ b/docs/latex/group___s_t_m32_g4xx___system___private___includes.tex
@@ -1,6 +1,6 @@
 \doxysubsubsection{STM32\+G4xx\+\_\+\+System\+\_\+\+Private\+\_\+\+Includes}
 \hypertarget{group___s_t_m32_g4xx___system___private___includes}{}\label{group___s_t_m32_g4xx___system___private___includes}\index{STM32G4xx\_System\_Private\_Includes@{STM32G4xx\_System\_Private\_Includes}}
-\doxysubsubsubsubsection*{Macros}
+\doxysubsubsubsubsection*{defines}
 \begin{DoxyCompactItemize}
 \item 
 \#define \mbox{\hyperlink{group___s_t_m32_g4xx___system___private___includes_gaeafcff4f57440c60e64812dddd13e7cb}{HSE\+\_\+\+VALUE}}~24000000U
@@ -9,10 +9,10 @@
 \end{DoxyCompactItemize}
 
 
-\doxysubsubsubsection{Detailed Description}
+\doxysubsubsubsection{Descripción detallada}
 
 
-\doxysubsubsubsection{Macro Definition Documentation}
+\doxysubsubsubsection{Documentación de «define»}
 \Hypertarget{group___s_t_m32_g4xx___system___private___includes_gaeafcff4f57440c60e64812dddd13e7cb}\label{group___s_t_m32_g4xx___system___private___includes_gaeafcff4f57440c60e64812dddd13e7cb} 
 \index{STM32G4xx\_System\_Private\_Includes@{STM32G4xx\_System\_Private\_Includes}!HSE\_VALUE@{HSE\_VALUE}}
 \index{HSE\_VALUE@{HSE\_VALUE}!STM32G4xx\_System\_Private\_Includes@{STM32G4xx\_System\_Private\_Includes}}
