--- a/docs/latex/group__stm32g4xx__system.tex
+++ b/docs/latex/group__stm32g4xx__system.tex
@@ -1,6 +1,6 @@
 \doxysubsection{Stm32g4xx\+\_\+system}
 \hypertarget{group__stm32g4xx__system}{}\label{group__stm32g4xx__system}\index{Stm32g4xx\_system@{Stm32g4xx\_system}}
-\doxysubsubsubsection*{Modules}
+\doxysubsubsubsection*{Módulos}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\hyperlink{group___s_t_m32_g4xx___system___private___includes}{STM32\+G4xx\+\_\+\+System\+\_\+\+Private\+\_\+\+Includes}}
@@ -19,7 +19,7 @@
 \end{DoxyCompactItemize}
 
 
-\doxysubsubsection{Detailed Description}
+\doxysubsubsection{Descripción detallada}
 \input{group___s_t_m32_g4xx___system___private___includes}
 \input{group___s_t_m32_g4xx___system___private___types_definitions}
 \input{group___s_t_m32_g4xx___system___private___defines}
