--- a/docs/latex/stm32g4xx__it_8c.tex
+++ b/docs/latex/stm32g4xx__it_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/unai.marti/\+MIS COSAS/\+REPOS/\+Doxy/\+Doxy/\+Core/\+Src/stm32g4xx\+\_\+it.c File Reference}
-\hypertarget{stm32g4xx__it_8c}{}\label{stm32g4xx__it_8c}\index{C:/Users/unai.marti/MIS COSAS/REPOS/Doxy/Doxy/Core/Src/stm32g4xx\_it.c@{C:/Users/unai.marti/MIS COSAS/REPOS/Doxy/Doxy/Core/Src/stm32g4xx\_it.c}}
+\doxysection{Referencia del archivo Core/\+Src/stm32g4xx\+\_\+it.c}
+\hypertarget{stm32g4xx__it_8c}{}\label{stm32g4xx__it_8c}\index{Core/Src/stm32g4xx\_it.c@{Core/Src/stm32g4xx\_it.c}}
 
 
 Interrupt Service Routines.  
@@ -7,7 +7,7 @@ Interrupt Service Routines.
 
 {\ttfamily \#include "{}main.\+h"{}}\newline
 {\ttfamily \#include "{}stm32g4xx\+\_\+it.\+h"{}}\newline
-\doxysubsubsection*{Functions}
+\doxysubsubsection*{Funciones}
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{stm32g4xx__it_8c_a6ad7a5e3ee69cb6db6a6b9111ba898bc}\label{stm32g4xx__it_8c_a6ad7a5e3ee69cb6db6a6b9111ba898bc} 
@@ -39,10 +39,10 @@ void {\bfseries Sys\+Tick\+\_\+\+Handler} (void)
 \begin{DoxyCompactList}\small\item\em This function handles System tick timer. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
-\doxysubsection{Detailed Description}
+\doxysubsection{Descripción detallada}
 Interrupt Service Routines. 
 
-\begin{DoxyAttention}{Attention}
+\begin{DoxyAttention}{Atención}
 
 \end{DoxyAttention}
 Copyright (c) 2023 STMicroelectronics. All rights reserved.
