--- a/docs/latex/system__stm32g4xx_8c.tex
+++ b/docs/latex/system__stm32g4xx_8c.tex
@@ -1,19 +1,19 @@
-\doxysection{C\+:/\+Users/unai.marti/\+MIS COSAS/\+REPOS/\+Doxy/\+Doxy/\+Core/\+Src/system\+\_\+stm32g4xx.c File Reference}
-\hypertarget{system__stm32g4xx_8c}{}\label{system__stm32g4xx_8c}\index{C:/Users/unai.marti/MIS COSAS/REPOS/Doxy/Doxy/Core/Src/system\_stm32g4xx.c@{C:/Users/unai.marti/MIS COSAS/REPOS/Doxy/Doxy/Core/Src/system\_stm32g4xx.c}}
+\doxysection{Referencia del archivo Core/\+Src/system\+\_\+stm32g4xx.c}
+\hypertarget{system__stm32g4xx_8c}{}\label{system__stm32g4xx_8c}\index{Core/Src/system\_stm32g4xx.c@{Core/Src/system\_stm32g4xx.c}}
 
 
 CMSIS Cortex-\/\+M4 Device Peripheral Access Layer System Source File.  
 
 
 {\ttfamily \#include "{}stm32g4xx.\+h"{}}\newline
-\doxysubsubsection*{Macros}
+\doxysubsubsection*{defines}
 \begin{DoxyCompactItemize}
 \item 
 \#define \mbox{\hyperlink{group___s_t_m32_g4xx___system___private___includes_gaeafcff4f57440c60e64812dddd13e7cb}{HSE\+\_\+\+VALUE}}~24000000U
 \item 
 \#define \mbox{\hyperlink{group___s_t_m32_g4xx___system___private___includes_gaaa8c76e274d0f6dd2cefb5d0b17fbc37}{HSI\+\_\+\+VALUE}}~16000000U
 \end{DoxyCompactItemize}
-\doxysubsubsection*{Functions}
+\doxysubsubsection*{Funciones}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{group___s_t_m32_g4xx___system___private___functions_ga93f514700ccf00d08dbdcff7f1224eb2}{System\+Init}} (void)
@@ -31,10 +31,10 @@ const uint8\+\_\+t {\bfseries APBPresc\+Table} \mbox{[}8\mbox{]} = \{0U, 0U, 0U,
 \end{DoxyCompactItemize}
 
 
-\doxysubsection{Detailed Description}
+\doxysubsection{Descripción detallada}
 CMSIS Cortex-\/\+M4 Device Peripheral Access Layer System Source File. 
 
-\begin{DoxyAuthor}{Author}
+\begin{DoxyAuthor}{Autor}
 MCD Application Team 
 \end{DoxyAuthor}
 This file provides two functions and one global variable to be called from user application\+:
@@ -60,7 +60,7 @@ After each device reset the HSI (16 MHz) is used as system clock source. Then \d
 \hypertarget{system__stm32g4xx_8c_autotoc_md12}{}\doxysubsubsection{\texorpdfstring{Require 48\+MHz for RNG                  \texorpdfstring{$\vert$}{|} Disabled}{Require 48MHz for RNG                  | Disabled}}\label{system__stm32g4xx_8c_autotoc_md12}
 =============================================================================
 
-\begin{DoxyAttention}{Attention}
+\begin{DoxyAttention}{Atención}
 
 \end{DoxyAttention}
 Copyright (c) 2019 STMicroelectronics. All rights reserved.
